--- a/zoo.html
+++ b/zoo.html
@@ -20,11 +20,25 @@
 		}
 	</style>
 
-
-
+	<script src="https://www.gstatic.com/firebasejs/3.7.2/firebase.js"></script>
+	<script>
+	  // Initialize Firebase
+	  var config = {
+		apiKey: "AIzaSyBmls2sfVR4H6kaJBVMkVopIIDKvMgpPK4",
+		authDomain: "fir-feu16.firebaseapp.com",
+		databaseURL: "https://fir-feu16.firebaseio.com",
+		storageBucket: "fir-feu16.appspot.com",
+		messagingSenderId: "489555246507"
+	  };
+	  firebase.initializeApp(config);
+	</script>
 </head>
 <body>
 	
+	<h1>Välkommen till vårt ZOO</h1>
+	<p>
+		Lägga till ett djur
+	</p>
 	
 	<script type="text/javascript">
 		// För att garantera att inga DOM-element är null
