--- a/zoo.html
+++ b/zoo.html
@@ -68,7 +68,7 @@
 			});
 			
 			firebase.database().ref('djur/').on('value', function(snapshot) {
-				console.log('Ändring i databasen');
+				console.log('Första gången eller ändring i databasen');
 				let data = snapshot.val();
 				for( let key in data ) {
 					let animal = data[key];
