--- a/zoo.html
+++ b/zoo.html
@@ -70,11 +70,13 @@
 			firebase.database().ref('djur/').on('value', function(snapshot) {
 				console.log('Första gången eller ändring i databasen');
 				let data = snapshot.val();
+				tableVisaDjur.innerHTML = '';
 				for( let key in data ) {
 					let animal = data[key];
 					console.log('data[key]=', data[key]);
 					let tr = document.createElement('tr');
-					tr.innerHTML = `<td>${animal.namn}</td> <td>${animal.familj}</td> <td>${animal.antal}</td> <td style='background-color: ${animal.färg}'></td>`;
+					tr.innerHTML = `<td>${animal.namn}</td> <td>${animal.familj}</td> <td>${animal.antal}</td> <td style="width: 50px; background-color: ${animal.färg};"></td>`;
+					tableVisaDjur.appendChild(tr);
 				}
 			})
 		});
