--- a/zoo-v2.html
+++ b/zoo-v2.html
@@ -45,6 +45,14 @@
 		<button id="addButton">Lägg till djur</button>
 	</p>
 	
+	<p>
+		Sortera efter: 
+		<button id="btnSortNamn">Djurnamn</button>
+		<button id="btnSortFamilj">Familj</button>
+		<button id="btnSortAntal">Antal</button>
+		<button id="btnSortFärg">Färg</button>
+	</p>
+	
 	<table id="tableVisaDjur"></table>
 	
 	<script type="text/javascript">
@@ -56,6 +64,10 @@
 			let färg = document.getElementById('inputFärg');
 			let addButton = document.getElementById('addButton');
 			let tableVisaDjur = document.getElementById('tableVisaDjur');
+			let btnSortNamn = document.getElementById('btnSortNamn');
+			let btnSortFamilj = document.getElementById('btnSortFamilj');
+			let btnSortAntal = document.getElementById('btnSortAntal');
+			let btnSortFärg = document.getElementById('btnSortFärg');
 			
 			addButton.addEventListener('click', function(event) {
 				console.log('Klickat lägga till djur');
@@ -71,19 +83,23 @@
 				console.log('Första gången eller ändring i databasen. prevChildKey: ' + prevChildKey);
 				let data = snapshot.val();
 				//console.log('data:', data);
+				addAnimalToTable(data);
+			});
+			function addAnimalToTable(data) {
 				let tr = document.createElement('tr');
 				tr.innerHTML = `<td>${data.namn}</td> <td>${data.familj}</td> <td>${data.antal}</td> <td style="width: 50px; background-color: ${data.färg};"></td>`;
 				tableVisaDjur.appendChild(tr);
-				/*
-				let data = snapshot.val();
+			}
+			
+			btnSortNamn.addEventListener('click', function(event) {
 				tableVisaDjur.innerHTML = '';
-				for( let key in data ) {
-					let animal = data[key];
-					console.log('data[key]=', data[key]);
-					let tr = document.createElement('tr');
-					tr.innerHTML = `<td>${animal.namn}</td> <td>${animal.familj}</td> <td>${animal.antal}</td> <td style="width: 50px; background-color: ${animal.färg};"></td>`;
-					tableVisaDjur.appendChild(tr);
-				}*/
+				//firebase.database().ref('djur/').off('value')
+				firebase.database().ref('djur/').orderByChild('namn')
+				.once('value', function(snapshot) {
+					snapshot.forEach( animal => {
+						addAnimalToTable(animal);
+					})
+				});
 			})
 		});
 	</script>
