--- a/zoo-v2.html
+++ b/zoo-v2.html
@@ -115,17 +115,20 @@
 			sortFunction(btnSortFärg, 'färg');
 			
 			inputAntalResultat.addEventListener('keypress', function(event) {
-				let antal = Number(inputAntalResultat.value);
-				tableVisaDjur.innerHTML = '';
-				if( isNaN(antal) ) {
-					// varna användaren
-				} else {
-					firebase.database().ref('djur/').limitToFirst(antal)
-					.once('value', function(snapshot) {
-							snapshot.forEach( animalRef => {
-								addAnimalToTable(animalRef.val());
-							})
-					});
+				if( event.keyCode == 13 ) {
+					let antal = Number(inputAntalResultat.value);
+					tableVisaDjur.innerHTML = '';
+					console.log('inputAntalResultat: antal=' + antal);
+					if( isNaN(antal) ) {
+						// varna användaren
+					} else {
+						firebase.database().ref('djur/').limitToFirst(antal)
+						.once('value', function(snapshot) {
+								snapshot.forEach( animalRef => {
+									addAnimalToTable(animalRef.val());
+								})
+						});
+					}
 				}
 			});
 		});
